# upac-cli

./: Cargo.toml  LICENSE
src/: app.rs  main.rs
src/commands/: package.rs  repo.rs
