[package]
name = "upac-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
regex = "1"
upac-core-lib = { git = "https://github.com/justpav05/upac-core-lib.git", branch = "main" }
upac-backend-alpm = { git = "https://github.com/justpav05/upac-backends", branch = "main" }
